--- a/init.cfg
+++ b/init.cfg
@@ -4,7 +4,7 @@
 # ====================================================================
 
 # directory in which the results will be stored
-run_dir = "runs/[name]"
+run_dir = "[name]"
 
 # execution mode
 mode = "local"
