update configs to do scoring too

--- a/init.cfg
+++ b/init.cfg
@@ -57,6 +57,10 @@ top_models = 2
 reference_fname = "data/Nb-Ag.pdb"
 
 [prodigyprotein]
+to_pKd = true
 
+[emscoring]
+
+[mdscoring]
 
 # ====================================================================
