fixes fixes fixes

--- a/ctrl.cfg
+++ b/ctrl.cfg
@@ -1,9 +1,11 @@
 # directory in which the results will be stored
-run_dir = "runs/CTRL"
+run_dir = "runs/ab_initio_CTRL"
 
 # execution mode
 mode = "local"
 ncores = 500
+
+gen_archive = true
 
 # molecules to be docked
 molecules = [
@@ -31,13 +33,16 @@ contactairs = true
 [emref]
 
 [clustfcc]
-clust_cutoff = 1.2
+clust_cutoff = 0.55
+min_population = 1
 
 [seletopclusts]
+top_clusters = 25
 top_models = 10
 
 [prodigyprotein]
-to_pKd = true
+to_pkd = true
+
 [emscoring]
 
 [mdscoring]
