--- a/init.cfg
+++ b/init.cfg
@@ -10,6 +10,8 @@ run_dir = "[name]"
 mode = "local"
 ncores = 500
 
+gen_archive = true
+
 # molecules to be docked
 molecules = [
     "[name]",
@@ -51,13 +53,13 @@ reference_fname = "data/Nb-Ag.pdb"
 [clustfcc]
 
 [seletopclusts]
-top_models = 2
+top_models = 5
 
 [caprieval]
 reference_fname = "data/Nb-Ag.pdb"
 
 [prodigyprotein]
-to_pKd = true
+to_pkd = true
 
 [emscoring]
 
